--- a/OctagonPlatform/Views/Terminals/Sections/Cassettes.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Cassettes.cshtml
@@ -1,9 +1,7 @@
 ﻿@model OctagonPlatform.Models.Terminal
 
-<h3 data-toggle="collapse" data-target="#getCassetes">Cassettes dw Info</h3>
-<div id="getCassetes" class="panel-collapse collapse">
+<div id="getCassettes" class="panel-collapse collapse">
     <div>
-
         <table>
             <tbody>
                 @{
@@ -30,7 +28,6 @@
                 }
             </tbody>
         </table>
-
 
         <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#myModalCassettesAdd">Add</button>
         @*//EDITTTTTTTTTTTTTTTTTTTTTTTTTTTtttttttttttttttt*@
