--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -1,10 +1,8 @@
 ﻿@model OctagonPlatform.Models.Terminal
 
-
+<div id="getConfigurations" class="panel-collapse collapse">
     <table class="table table-striped table-hover ">
-
         <tr class="info">
-
             <th data-toggle="collapse" data-target="#demo">
                 Inactive Period: @Model.TerminalAlertConfigs.IgnoreHoursInactive
                 <div id="demo" class="collapse">
@@ -13,23 +11,23 @@
                             @{
                                 foreach (var item in Model.WorkingHours)
                                 {
-                                    <tr>
-                                        <td>
-                                            @item.Day
-                                            @item.StartTime
-                                            - @item.EndTime
-                                        </td>
-                                        <td>
-                                            <button type="button" class="WorkingHoursEdit btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModalWorkingHours">Edit</button>
-                                        </td>
-                                    </tr>
+                            <tr>
+                                <td>
+                                    @item.Day
+                                    @item.StartTime
+                                    - @item.EndTime
+                                </td>
+                                <td>
+                                    <button type="button" class="WorkingHoursEdit btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModalWorkingHours">Edit</button>
+                                </td>
+                            </tr>
                                 }
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#ModalAddWorkingHours">Add</button>
-                                    </td>
-                                </tr>
+                            <tr>
+                                <td></td>
+                                <td>
+                                    <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#ModalAddWorkingHours">Add</button>
+                                </td>
+                            </tr>
                             }
                         </tbody>
                     </table>
@@ -323,12 +321,13 @@
             </div>
         </div>
     </div>
+</div>
 
 @Scripts.Render("~/Scripts/jquery-1.10.2.js")
 
-    <script>
-        $(document).on("click", ".WorkingHoursEdit", function () {
-            var myBookId = $(this).data('id');
-            $("#myModalWorkingHours #WorkingHoursEdit").val(myBookId);
-        });
-    </script>
+<script>
+    $(document).on("click", ".WorkingHoursEdit", function () {
+        var myBookId = $(this).data('id');
+        $("#myModalWorkingHours #WorkingHoursEdit").val(myBookId);
+    });
+</script>
