ajuste a detalil. poniendo link a las opciones

--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -26,7 +26,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getConfigurations">
-                        <i class="fa fa-sun-o" style="font-size:25px;color:#4776a1"></i>Configuration
+                        <i class="fa fa-sun-o" style="font-size:25px;color:#4776a1"></i><a href="#">Configuration</a>
                     </h3>
                     @Html.Partial("Sections/ConfigNotification", Model)
                 </div>
@@ -37,7 +37,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getGeneralInfo">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1"></i>General Info
+                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1"></i><a href="#">General Info</a>
                     </h3>
                     @Html.Partial("Sections/GeneralInfo", Model)
                 </div>
@@ -48,7 +48,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getCassettes">
-                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i>Cassettes
+                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a href="#">Cassettes</a>
                     </h3>
                     @Html.Partial("Sections/Cassettes", Model)
                 </div>
@@ -59,7 +59,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getNotes">
-                        <i class="fa fa-sticky-note-o" style="font-size:25px;color:#4776a1"></i>Notes
+                        <i class="fa fa-sticky-note-o" style="font-size:25px;color:#4776a1"></i><a href="#">Notes</a>
                     </h3>
                     @Html.Partial("Sections/Notes", Model)
                 </div>
@@ -70,7 +70,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getDocumnents">
-                        <i class="fa fa-file-text" style="font-size:25px;color:#4776a1"></i>Documents
+                        <i class="fa fa-file-text" style="font-size:25px;color:#4776a1"></i><a href="#">Documents</a>
                     </h3>
                     @Html.Partial("Sections/Documents", Model)
                 </div>
@@ -80,7 +80,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getPictures">
-                        <i class="fa fa-picture-o" style="font-size:25px;color:#4776a1"></i>Pictures
+                        <i class="fa fa-picture-o" style="font-size:25px;color:#4776a1"></i><a href="#">Pictures</a>
                     </h3>
                     @Html.Partial("Sections/Pictures", Model)
                 </div>
@@ -93,7 +93,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getContacts">
-                        <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i>Contacts
+                        <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i><a href="#">Contacts</a>
                     </h3>
                     @Html.Partial("Sections/Contacts", Model)
 
@@ -105,7 +105,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getVaultCash">
-                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i>Vault Cash
+                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a href="#">Vault Cash</a>
                     </h3>
                     @Html.Partial("Sections/VaultCash", Model)
                 </div>
@@ -116,7 +116,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getSurcharge">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i>Surcharge
+                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a href="#">Surcharge</a>
                     </h3>
                     @Html.Partial("Sections/Surcharge", Model)
                 </div>
@@ -127,7 +127,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getInterchange">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i>Interchanges
+                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a href="#">Interchanges</a>
                     </h3>
                     @Html.Partial("Sections/Interchanges", Model)
                 </div>
@@ -138,7 +138,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getCashManagement">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i>Cash Management
+                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a href="#">Cash Management</a>
                     </h3>
                     @Ajax.ActionLink("Cash Management", "CashManagement", "Terminals", new { terminalId = Model.TerminalId },
                    new AjaxOptions
