--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -88,7 +88,7 @@
         <h3 class="panel-title">List Cash Load</h3>       
     </div>
     <div class="panel-body">
-        @Html.Partial("_PartialCashLoadTable")
+        @Html.Partial("_PartialTableMorris")
 
         <div>
             @Html.ActionLink("Back to List", "Index")
@@ -121,8 +121,8 @@
         });
 
         //end
-            ChartBar();
-            ExportPdf();
+        ChartBar();
+        Createdatatable();
 
 
 
