cambios de css en exportpdf

--- a/OctagonPlatform/Views/ReportsSmart/_PartialTableNoMorris.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialTableNoMorris.cshtml
@@ -40,7 +40,7 @@
         </div>
         <div id="TableExport" class="row">
             @grid.GetHtml(
-          tableStyle: "table table-striped grid-table",
+          tableStyle: "table table-striped",
           htmlAttributes: new { id = "grid", width = "100%" }
            )           
         </div>
