fix terminal WorkingHours

--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -69,7 +69,7 @@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="texth3" data-toggle="collapse" data-target="#getDocumnents">
+                    <h3 class="texth3" data-toggle="collapse" data-target="#getDocuments">
                         <i class="fa fa-file-text" style="font-size:25px;color:#4776a1"></i><a href="#">Documents</a>
                     </h3>
                     @Html.Partial("Sections/Documents", Model)
