--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -3,9 +3,9 @@
 <div id="getConfigurations" class="panel-collapse collapse">
     <table class="table table-striped table-hover ">
         <tr class="info">
-            <th data-toggle="collapse" data-target="#demo">
-                Inactive Period: @Model.TerminalAlertConfigs.IgnoreHoursInactive
-                <div id="demo" class="collapse">
+            <th data-toggle="collapse" data-target="#collapse1">
+                <a data-toggle="collapse" href="#collapse1">Inactive Period: @Model.TerminalAlertConfigs.IgnoreHoursInactive</a>
+                <div id="collapse1" class="collapse">
                     <table>
                         <tbody>
                             @{
@@ -19,6 +19,9 @@
                                 </td>
                                 <td>
                                     <button type="button" class="WorkingHoursEdit btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModalWorkingHours">Edit</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="WorkingHoursDelete btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteWorkingHours">Delete</button>
                                 </td>
                             </tr>
                                 }
@@ -136,7 +139,8 @@
             </div>
         </div>
     </div>
-
+    @*========= Modal =========*@
+    @*EDIT*@
     <div id="myModalWorkingHours" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -190,7 +194,6 @@
                     new SelectListItem{ Text="23:00", Value = "23" },
                     new SelectListItem{ Text="24:00", Value = "24" },
                  })
-
                     @Html.DropDownList("EndTime", new List<SelectListItem>
                 {
                     new SelectListItem{ Text="01:00", Value = "1" },
@@ -229,6 +232,7 @@
         </div>
     </div>
 
+    @*ADD*@
     <div id="ModalAddWorkingHours" class="modal fade" role="dialog">
 
         <div class="modal-dialog">
@@ -321,6 +325,34 @@
             </div>
         </div>
     </div>
+
+    @*DELETE*@
+    <div id="DeleteWorkingHours" class="modal fade" role="dialog">
+
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Delete Working Hours</h4>
+                    <h3 class="alert-info">Delete</h3>
+                </div>
+
+                @using (Html.BeginForm("DeleteWorkingHours", "Terminals"))
+            {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.TerminalId)
+                    <input type="hidden" id="WorkingHoursId" name="WorkingHoursId" value="">
+
+                    <div class="form-group">
+                        <div class="col-lg-10 col-lg-offset-2">
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+
 </div>
 
 @Scripts.Render("~/Scripts/jquery-1.10.2.js")
@@ -329,5 +361,12 @@
     $(document).on("click", ".WorkingHoursEdit", function () {
         var myBookId = $(this).data('id');
         $("#myModalWorkingHours #WorkingHoursEdit").val(myBookId);
+    });
+</script>
+
+<script>
+    $(document).on("click", ".WorkingHoursDelete", function () {
+        var myBookId = $(this).data('id');
+        $("#DeleteWorkingHours #WorkingHoursId").val(myBookId);
     });
 </script>
