--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -26,7 +26,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getConfigurations">
-                        <i class="fa fa-sun-o" style="font-size:25px;color:#4776a1"></i><a href="#">Configuration</a>
+                        <i class="fa fa-sun-o" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getConfigurations">Configuration</a>
                     </h3>
                     @Html.Partial("Sections/ConfigNotification", Model)
                 </div>
@@ -37,7 +37,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getGeneralInfo">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1"></i><a href="#">General Info</a>
+                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getGeneralInfo">General Info</a>
                     </h3>
                     @Html.Partial("Sections/GeneralInfo", Model)
                 </div>
@@ -48,7 +48,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getCassettes">
-                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a href="#">Cassettes</a>
+                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getCassettes">Cassettes</a>
                     </h3>
                     @Html.Partial("Sections/Cassettes", Model)
                 </div>
@@ -59,7 +59,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getNotes">
-                        <i class="fa fa-sticky-note-o" style="font-size:25px;color:#4776a1"></i><a href="#">Notes</a>
+                        <i class="fa fa-sticky-note-o" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getNotes">Notes</a>
                     </h3>
                     @Html.Partial("Sections/Notes", Model)
                 </div>
@@ -70,7 +70,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getDocuments">
-                        <i class="fa fa-file-text" style="font-size:25px;color:#4776a1"></i><a href="#">Documents</a>
+                        <i class="fa fa-file-text" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getDocuments">Documents</a>
                     </h3>
                     @Html.Partial("Sections/Documents", Model)
                 </div>
@@ -80,7 +80,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getPictures">
-                        <i class="fa fa-picture-o" style="font-size:25px;color:#4776a1"></i><a href="#">Pictures</a>
+                        <i class="fa fa-picture-o" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getPictures">Pictures</a>
                     </h3>
                     @Html.Partial("Sections/Pictures", Model)
                 </div>
@@ -93,7 +93,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getContacts">
-                        <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i><a href="#">Contacts</a>
+                        <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getContacts">Contacts</a>
                     </h3>
                     @Html.Partial("Sections/Contacts", Model)
 
@@ -105,7 +105,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getVaultCash">
-                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a href="#">Vault Cash</a>
+                        <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getVaultCash">Vault Cash</a>
                     </h3>
                     @Html.Partial("Sections/VaultCash", Model)
                 </div>
@@ -116,7 +116,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getSurcharge">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a href="#">Surcharge</a>
+                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getSurcharge">Surcharge</a>
                     </h3>
                     @Html.Partial("Sections/Surcharge", Model)
                 </div>
@@ -127,9 +127,9 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getInterchange">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a href="#">Interchanges</a>
+                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getInterchange">Interchanges</a>
                     </h3>
-                    @Html.Partial("Sections/Interchanges", Model)
+                    @Html.Partial("Sections/Interchanges",Model.InterChanges, new ViewDataDictionary() { { "terminalId", Model.Id } })
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getCashManagement">
-                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a href="#">Cash Management</a>
+                        <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getCashManagement">Cash Management</a>
                     </h3>
                     @Ajax.ActionLink("Cash Management", "CashManagement", "Terminals", new { terminalId = Model.TerminalId },
                    new AjaxOptions
