--- a/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
@@ -1,16 +1,16 @@
-﻿@model OctagonPlatform.Models.Terminal
+﻿@model IEnumerable<OctagonPlatform.Models.InterChange>
 
 <div id="getInterchange" class="panel-collapse collapse">
-
+    <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#AddInterchange">Add</button>
     <div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
         @Html.ActionLink(
-                        linkText: "Add Interchange",
-                        actionName: "Create",
-                        controllerName: "InterChange",
-                        routeValues: new
-                        {
-                            terminalId = Model.Id
-                        },
+                     linkText: "Add Interchange",
+                     actionName: "Create",
+                     controllerName: "InterChange",
+                     routeValues: new
+                     {
+                         terminalId = ViewData["terminalId"]?.ToString()
+                     },
                         htmlAttributes: null
                         )
     </div>
@@ -36,7 +36,7 @@
         @if (Model != null)
         {
 
-            foreach (var item in Model.InterChanges)
+            foreach (var item in Model)
             {
                 <tbody>
                     <tr>
@@ -72,7 +72,42 @@
 
 
     </table>
-    <div id="confirmdeleteInterchange" class="modal">
+
+    @*=========== MODAL =============*@
+
+    @*ADD*@
+    @*<div id="AddInterchange" class="modal fade" role="dialog">
+
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                    <h3 class="alert-info">Edit Config Alert</h3>
+                </div>
+
+                @using (Html.BeginForm("", "Terminals"))
+            {
+                    @Model
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.)
+
+                    @Html.DropDownListFor(m => m.Partner.BankAccounts.FirstOrDefault().Id, new SelectList(Model.Partner.BankAccounts, "Id", "NickName"));
+
+                    <div class="form-group">
+                        <div class="col-lg-10 col-lg-offset-2">
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                }
+
+            </div>
+        </div>
+    </div>*@
+
+
+    @*DELETE*@
+    @*<div id="confirmdeleteInterchange" class="modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -85,26 +120,19 @@
                 <div class="modal-footer">
                     @using (Html.BeginForm("Delete", "InterChange", FormMethod.Post))
                     {
-                        @Html.AntiForgeryToken()
-
-                        @Html.Hidden("terminalId", Model.Id)
-                        @Html.Hidden("id")
-                        <div class="form-group">
-                            <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
-                            <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
-                        </div>
+                    @Html.AntiForgeryToken()
+                    @Html.Hidden("terminalId", Model.Id)
+                    @Html.Hidden("id")
+                    <div class="form-group">
+                        <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
+                        <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
+                    </div>
                     }
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 </div>
-
-
-
-
-
-
 
 
 
