--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -107,7 +107,7 @@
                     <h3 class="texth3" data-toggle="collapse" data-target="#getVaultCash">
                         <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getVaultCash">Vault Cash</a>
                     </h3>
-                    @Html.Partial("Sections/VaultCash", Model)
+                    @Html.Partial("Sections/VaultCash", Model.VaultCash, new ViewDataDictionary() { { "terminalId", Model.Id } })
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                     <h3 class="texth3" data-toggle="collapse" data-target="#getSurcharge">
                         <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getSurcharge">Surcharge</a>
                     </h3>
-                    @Html.Partial("Sections/Surcharge", Model)
+                    @Html.Partial("Sections/Surcharge", Model.Surcharges, new ViewDataDictionary() { { "terminalId", Model.Id } })
                 </div>
             </div>
         </div>
@@ -161,7 +161,15 @@
             </div>
         </div>
     </div>
+
     <div id="AddInterchange" class="modal fade" role="dialog">
+        <div class="loader"></div>
+    </div>
+    <div id="AddSurcharge" class="modal fade" role="dialog">
+        <div class="loader"></div>
+    </div>
+    <div id="AddVaultCash" class="modal fade" role="dialog">
+        <div class="loader"></div>
     </div>
     @section Scripts {
 
